// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/chats DELETE / /:chatId - delete chat 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/chats GET / / - get chats 1`] = `
Object {
  "entities": Object {
    "chats": Object {
      "3180a744-f6b0-4a09-8046-4e713bf5b565": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "hasUnread": false,
        "id": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "isFlagged": false,
        "lastTextMessageDate": "2017-07-22T00:14:30.932Z",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientPhoneNumber": "+16045555555",
      },
    },
  },
  "result": Array [
    "3180a744-f6b0-4a09-8046-4e713bf5b565",
  ],
}
`;

exports[`/api/chats GET / /:chatId - retrieve chat 1`] = `
Object {
  "entities": Object {
    "chats": Object {
      "3180a744-f6b0-4a09-8046-4e713bf5b565": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "hasUnread": false,
        "id": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "isFlagged": false,
        "lastTextMessageDate": "2017-07-22T00:14:30.932Z",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientPhoneNumber": "+16045555555",
      },
    },
  },
  "result": "3180a744-f6b0-4a09-8046-4e713bf5b565",
}
`;

exports[`/api/chats GET / /:chatId/textMessages - offset and limiting returns correct messages 1`] = `
Object {
  "entities": Object {
    "textMessages": Object {
      "059987cb-3051-4656-98d0-72cda34d32a6": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a6",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": false,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": false,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
    },
  },
  "result": Array [
    "059987cb-3051-4656-98d0-72cda34d32a6",
  ],
  "total": 2,
}
`;

exports[`/api/chats GET / /:chatId/textMessages - retrieve text messages for a chat 1`] = `
Object {
  "entities": Object {
    "textMessages": Object {
      "059987cb-3051-4656-98d0-72cda34d32a1": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message, latest",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a1",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": false,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": false,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
      "059987cb-3051-4656-98d0-72cda34d32a6": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a6",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": false,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": false,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
    },
  },
  "result": Array [
    "059987cb-3051-4656-98d0-72cda34d32a1",
    "059987cb-3051-4656-98d0-72cda34d32a6",
  ],
  "total": 2,
}
`;

exports[`/api/chats GET / /patient/:patientId - return chat with patient 1`] = `
Object {
  "entities": Object {
    "chats": Object {
      "3180a744-f6b0-4a09-8046-4e713bf5b565": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "hasUnread": false,
        "id": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "isFlagged": false,
        "lastTextMessageDate": "2017-07-22T00:14:30.932Z",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientPhoneNumber": "+16045555555",
        "textMessages": Array [
          "059987cb-3051-4656-98d0-72cda34d32a6",
          "059987cb-3051-4656-98d0-72cda34d32a1",
        ],
      },
    },
    "textMessages": Object {
      "059987cb-3051-4656-98d0-72cda34d32a1": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message, latest",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a1",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": false,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": false,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
      "059987cb-3051-4656-98d0-72cda34d32a6": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a6",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": false,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": false,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
    },
  },
  "result": "3180a744-f6b0-4a09-8046-4e713bf5b565",
}
`;

exports[`/api/chats PUT / /:_chatId/textMessages/read - set all of chats unread text messages to read 1`] = `
Object {
  "entities": Object {
    "chats": Object {
      "3180a744-f6b0-4a09-8046-4e713bf5b565": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "hasUnread": false,
        "id": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "isFlagged": false,
        "lastTextMessageDate": "2017-07-22T00:14:30.932Z",
        "lastTextMessageId": null,
        "patient": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientPhoneNumber": "+16045555555",
        "textMessages": Array [
          "059987cb-3051-4656-98d0-72cda34d32a1",
          "059987cb-3051-4656-98d0-72cda34d32a6",
        ],
      },
    },
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "address": null,
        "avatarUrl": null,
        "birthDate": "1980-01-01T00:00:00.932Z",
        "cellPhoneNumber": "+17789999999",
        "contCareInterval": null,
        "contactMethodNote": null,
        "dueForHygieneDate": null,
        "dueForRecallExamDate": null,
        "email": "testpatient@test.com",
        "familyId": "b35bee92-e86d-4084-87d8-add21a1ba0f6",
        "firstApptDate": null,
        "firstApptId": null,
        "firstName": "Ronald",
        "gender": null,
        "homePhoneNumber": null,
        "hygienePendingAppointmentId": null,
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "insurance": null,
        "insuranceInterval": null,
        "isDeleted": false,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "language": null,
        "lastApptDate": null,
        "lastApptId": null,
        "lastHygieneApptId": null,
        "lastHygieneDate": null,
        "lastName": "Mcdonald",
        "lastRecallApptId": null,
        "lastRecallDate": null,
        "lastRestorativeApptId": null,
        "lastRestorativeDate": null,
        "middleName": null,
        "mobilePhoneNumber": "+17789999999",
        "nextApptDate": null,
        "nextApptId": null,
        "omitRecallIds": Array [],
        "omitReminderIds": Array [],
        "otherPhoneNumber": null,
        "patientUserId": null,
        "phoneNumber": null,
        "pmsCreatedAt": null,
        "pmsId": "12",
        "prefContactPhone": null,
        "prefName": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "recalls": true,
          "referrals": true,
          "reminders": true,
          "reviews": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "recallPendingAppointmentId": null,
        "status": "Active",
        "type": null,
        "workPhoneNumber": null,
      },
    },
    "textMessages": Object {
      "059987cb-3051-4656-98d0-72cda34d32a1": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message, latest",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a1",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": true,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": false,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
      "059987cb-3051-4656-98d0-72cda34d32a6": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a6",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": true,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": false,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
    },
  },
  "result": "3180a744-f6b0-4a09-8046-4e713bf5b565",
}
`;

exports[`/api/weeklySchedules POST / should create a weekly schedule and have the appropriate defaults 1`] = `
Object {
  "entities": Object {
    "weeklySchedules": Object {
      "8ce3ba61-60cd-40c6-bc85-c018cabd4a44": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "friday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "isAdvanced": false,
        "monday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "pmsId": null,
        "saturday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "startDate": null,
        "sunday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "thursday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "tuesday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "wednesday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "weeklySchedules": null,
      },
    },
  },
  "result": "8ce3ba61-60cd-40c6-bc85-c018cabd4a44",
}
`;

exports[`/api/weeklySchedules POST / should create a weekly schedule and use customized daily schedule if provided 1`] = `
Object {
  "entities": Object {
    "weeklySchedules": Object {
      "8ce3ba61-60cd-40c6-bc85-c018cabd4a44": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "friday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "isAdvanced": false,
        "monday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1996-08-03T16:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1996-08-02T16:00:00.000Z",
        },
        "pmsId": null,
        "saturday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "startDate": null,
        "sunday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "thursday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "tuesday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "wednesday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "weeklySchedules": null,
      },
    },
  },
  "result": "8ce3ba61-60cd-40c6-bc85-c018cabd4a44",
}
`;

exports[`/api/weeklySchedules POST / should create a weekly schedule with monday closed if provided startTime equals to endTime 1`] = `
Object {
  "entities": Object {
    "weeklySchedules": Object {
      "8ce3ba61-60cd-40c6-bc85-c018cabd4a44": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "friday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "isAdvanced": false,
        "monday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1996-08-02T16:00:00.000Z",
          "isClosed": true,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1996-08-02T16:00:00.000Z",
        },
        "pmsId": null,
        "saturday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "startDate": null,
        "sunday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "thursday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "tuesday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "wednesday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": null,
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "weeklySchedules": null,
      },
    },
  },
  "result": "8ce3ba61-60cd-40c6-bc85-c018cabd4a44",
}
`;

exports[`/api/weeklySchedules PUT /:weeklyScheduleId should update a weekly schedule 1`] = `
Object {
  "entities": Object {
    "weeklySchedules": Object {
      "8ce3ba61-60cd-40c6-bc85-c018cabd4a40": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "friday": null,
        "fridayId": null,
        "id": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
        "isAdvanced": true,
        "monday": null,
        "mondayId": null,
        "pmsId": null,
        "saturday": null,
        "saturdayId": null,
        "startDate": null,
        "sunday": null,
        "sundayId": null,
        "thursday": null,
        "thursdayId": null,
        "tuesday": null,
        "tuesdayId": null,
        "wednesday": null,
        "wednesdayId": null,
        "weeklySchedules": null,
      },
    },
  },
  "result": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
}
`;

exports[`/api/weeklySchedules PUT /:weeklyScheduleId should update monday and set the startTime equal to endTime for weeklySchedule if isClosed for monday is set to be true 1`] = `
Object {
  "entities": Object {
    "weeklySchedules": Object {
      "3330f60a-ec83-431f-a67e-28142ab43caa": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "friday": null,
        "fridayId": null,
        "id": "3330f60a-ec83-431f-a67e-28142ab43caa",
        "isAdvanced": false,
        "monday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": "2019-08-08",
          "deletedAt": null,
          "endTime": "1970-01-01T00:00:00.000Z",
          "id": "8f698c5b-d4a2-4550-a6dc-1942e068d930",
          "isClosed": true,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-01T00:00:00.000Z",
        },
        "mondayId": "8f698c5b-d4a2-4550-a6dc-1942e068d930",
        "pmsId": null,
        "saturday": null,
        "saturdayId": null,
        "startDate": null,
        "sunday": null,
        "sundayId": null,
        "thursday": null,
        "thursdayId": null,
        "tuesday": null,
        "tuesdayId": null,
        "wednesday": null,
        "wednesdayId": null,
        "weeklySchedules": null,
      },
    },
  },
  "result": "3330f60a-ec83-431f-a67e-28142ab43caa",
}
`;

exports[`/api/weeklySchedules PUT /:weeklyScheduleId should update monday dailySchedule for weeklySchedule if provided 1`] = `
Object {
  "entities": Object {
    "weeklySchedules": Object {
      "3330f60a-ec83-431f-a67e-28142ab43caa": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "friday": null,
        "fridayId": null,
        "id": "3330f60a-ec83-431f-a67e-28142ab43caa",
        "isAdvanced": false,
        "monday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": "2019-08-08",
          "deletedAt": null,
          "endTime": "2008-02-01T01:00:00.000Z",
          "id": "8f698c5b-d4a2-4550-a6dc-1942e068d930",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "2008-01-31T16:00:00.000Z",
        },
        "mondayId": "8f698c5b-d4a2-4550-a6dc-1942e068d930",
        "pmsId": null,
        "saturday": null,
        "saturdayId": null,
        "startDate": null,
        "sunday": null,
        "sundayId": null,
        "thursday": null,
        "thursdayId": null,
        "tuesday": null,
        "tuesdayId": null,
        "wednesday": null,
        "wednesdayId": null,
        "weeklySchedules": null,
      },
    },
  },
  "result": "3330f60a-ec83-431f-a67e-28142ab43caa",
}
`;
